--- a/src/pages/tagged/index.astro
+++ b/src/pages/tagged/index.astro
@@ -12,7 +12,7 @@ const description = "Find covers that are…";
 ---
 
 <BaseLayout
-  title={title}
+  title={`${title} on Genderswap.fm`}
   description="Find covers that are slower (or faster), happier (or sadder), more danceable (or less), or other things."
 >
   <PageHeader title={title} description={description} />
