--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -44,10 +44,12 @@ const pathData =
   .icon {
     display: inline-block;
     flex-shrink: 0;
+    width: 24px;
+    height: 24px;
   }
 
   .icon.small {
-    width: 0.6666em;
-    height: 0.6666em;
+    width: 20px;
+    height: 20px;
   }
 </style>
