Add total cover count

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,14 +8,10 @@ const { count } = await supabase
 ---
 
 <footer transition:animate="fade">
-  <nav>
-    {
-      count && (
-        <span class="count">
-          <strong>{`${count} covers`}</strong> and counting
-        </span>
-      )
-    }
+  <div class="count">
+    <em>{`${count ?? "A bunch of"} covers and counting`}</em>
+  </div>
+  <nav class="nav">
     <span class="credits">
       A project by <a href="https://evadecker.com">Eva Decker</a>
     </span>
@@ -86,10 +82,16 @@ const { count } = await supabase
 <style lang="scss">
   footer {
     width: 100%;
-    padding: var(--space-xl);
-    display: flex;
+    padding-inline: var(--space-m);
+    padding-block: var(--space-l);
+    display: grid;
+    grid-template-areas:
+      "count count"
+      "nav toggle";
+    grid-template-columns: 1fr fit-content(64px);
+    grid-template-rows: 1px auto;
     align-items: center;
-    justify-content: space-between;
+    row-gap: var(--space-l);
     z-index: 0;
 
     a {
@@ -107,7 +109,37 @@ const { count } = await supabase
     }
   }
 
-  nav,
+  .count {
+    grid-area: count;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    font-size: var(--step--1);
+    color: var(--mauve-11);
+
+    em {
+      background-color: var(--mauve-1);
+      padding-inline: var(--space-s);
+    }
+
+    &::before {
+      content: "";
+      height: 1px;
+      background-color: var(--mauve-6);
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 50%;
+      z-index: -1;
+    }
+  }
+
+  .nav {
+    grid-area: nav;
+  }
+
+  .nav,
   .links {
     font-size: var(--step--1);
     display: flex;
@@ -126,6 +158,7 @@ const { count } = await supabase
   }
 
   .toggle {
+    grid-area: toggle;
     position: relative;
     display: flex;
     align-items: center;
