--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -18,17 +18,44 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       ></path>
     </svg>
     <h1>Not Found</h1>
+    <a href="/random" class="button">Get random cover</a>
   </div>
 </BaseLayout>
 
-<style>
+<style lang="scss">
   .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: var(--space-xl);
+    padding-block: var(--space-2xl);
     flex: 1;
     height: 100%;
+  }
+
+  .button {
+    background: var(--mauve-12);
+    color: var(--mauve-1);
+    border: none;
+    cursor: pointer;
+    border-radius: var(--radius-full);
+    padding-block: var(--space-s);
+    padding-inline: var(--space-xl);
+    margin-inline: auto;
+    font-size: var(--step-1);
+    font-weight: var(--font-weight-bold);
+
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        background: var(--violet-9);
+        color: white;
+      }
+    }
+
+    &:focus {
+      outline: 3px solid var(--violet-a9);
+      outline-offset: 3px;
+    }
   }
 </style>
