--- a/src/components/CoverCard.astro
+++ b/src/components/CoverCard.astro
@@ -1,5 +1,5 @@
 ---
-import { supabase } from "../lib/supabase";
+import { smartquotes } from "../helpers/helpers.ts";
 
 type Props = {
   originalSongId: string;
@@ -26,6 +26,8 @@ const {
   coverAlbumName,
   slug,
 } = Astro.props;
+
+const title = smartquotes(originalSongName);
 ---
 
 <div class="cover-card">
@@ -47,7 +49,7 @@ const {
   </div>
   <div class="content">
     <h2 class="title">
-      {originalSongName}
+      {title}
     </h2>
     <div class="artist">
       <strong>{coverSongArtist}</strong> covering <strong
