Add dynamic OG images

--- a/src/components/CoverComparison.astro
+++ b/src/components/CoverComparison.astro
@@ -1,6 +1,6 @@
 ---
 import { slugify, smartquotes } from "../helpers/helpers";
-import type { Cover } from "../pages/cover/[slug].astro";
+import type { Cover } from "../pages/cover/[slug]/index.astro";
 import Icon from "./Icon.astro";
 
 type Props = {
