Update page title

--- a/src/pages/cover/[slug]/index.astro
+++ b/src/pages/cover/[slug]/index.astro
@@ -64,7 +64,7 @@ const pageDescription = description ? smartquotes(description) : undefined;
 ---
 
 <BaseLayout
-  title={title}
+  title={pageTitle}
   description={pageDescription}
   ogImage={`/cover/${slug}/og.png`}
   ogAlt={title}
