--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -13,11 +13,15 @@ const { title, description } = Astro.props;
   <slot />
 </header>
 
-<style>
+<style lang="scss">
   .header {
     padding-block-start: var(--space-xl);
     padding-block-end: var(--space-3xl);
     padding-inline: var(--space-l);
+    @supports (padding: max(0px)) {
+      padding-inline-start: max(var(--space-l), env(safe-area-inset-left));
+      padding-inline-end: max(var(--space-l), env(safe-area-inset-right));
+    }
     display: flex;
     flex-direction: column;
     align-items: center;
