--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -12,6 +12,10 @@
     margin-inline: auto;
     width: calc(100% - 3rem);
     max-inline-size: 60ch;
-    padding-inline: 1.5rem;
+    padding-inline: var(--space-l);
+    @supports (padding: max(0px)) {
+      padding-inline-start: max(var(--space-l), env(safe-area-inset-left));
+      padding-inline-end: max(var(--space-l), env(safe-area-inset-right));
+    }
   }
 </style>
