--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,6 @@ import CoverCardGrid from "../components/CoverCardGrid.astro";
 import PageHeader from "../components/PageHeader.astro";
 import Tag from "../components/Tag.astro";
 import TagCloud from "../components/TagCloud.astro";
-import { slugifyCover } from "../helpers/helpers";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { supabase } from "../lib/supabase";
 
@@ -16,7 +15,8 @@ const { data: covers } = await supabase
     cover:cover_id(id, name, artists, album_name, album_img)
   `
   )
-  .order("created_at", { ascending: false });
+  .order("created_at", { ascending: false })
+  .range(0, 23); // 24 entries total
 ---
 
 <BaseLayout
