Fix submit form width

--- a/src/components/SubmitForm/form.module.scss
+++ b/src/components/SubmitForm/form.module.scss
@@ -1,4 +1,7 @@
 .submitForm {
+  max-inline-size: 54ch;
+  margin-inline: auto;
+  padding-inline: var(--space-xl);
   padding-block-end: var(--space-2xl);
 }
 
