Modify spacing and radii

--- a/src/components/CoverComparison.astro
+++ b/src/components/CoverComparison.astro
@@ -161,7 +161,7 @@ if (slugify(originalSong.name) !== slugify(coverSong.name)) {
     aspect-ratio: 1 / 1;
     background: var(--mauve-3);
     overflow: hidden;
-    border-radius: var(--radius-m);
+    border-radius: var(--radius-s);
     position: relative;
     z-index: 1;
     box-shadow:
