--- a/src/components/SubmitForm/songSelect.module.scss
+++ b/src/components/SubmitForm/songSelect.module.scss
@@ -11,7 +11,7 @@
 }
 
 .selectedAlbum {
-  border-radius: var(--radius-m);
+  border-radius: var(--radius-xs);
   width: var(--space-3xl);
   height: var(--space-3xl);
 }
