--- a/src/components/CoverCard.astro
+++ b/src/components/CoverCard.astro
@@ -98,7 +98,7 @@ const title = smartquotes(originalSongName);
 
   .album {
     background-color: var(--mauve-3);
-    border-radius: var(--radius-s);
+    border-radius: var(--radius-xs);
     overflow: hidden;
     aspect-ratio: 1;
     transition: transform 0.2s ease-in-out;
