Fix image width

--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -148,7 +148,8 @@ const formattedModifiedDate = dayjs(dateModified).format("MMMM D, YYYY");
       /* This width is just for Andrea Lawlor's email;
          if other images are added, might need to enable MDX
          and set width per-image */
-      max-width: 585px;
+      width: 585px;
+      max-width: 100%;
       border-radius: var(--radius-s);
       margin-inline: auto;
     }
