Mark pages as statically rendered

--- a/src/pages/new/index.astro
+++ b/src/pages/new/index.astro
@@ -2,6 +2,9 @@
 import Container from "../../components/Container.astro";
 import { SubmitForm } from "../../components/SubmitForm/SubmitForm";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+
+// Static page
+export const prerender = true;
 ---
 
 <BaseLayout title="Submit a cover · Genderswap.fm">
