--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,8 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+
+// Static page
+export const prerender = true;
 ---
 
 <BaseLayout title="Not Found" description="This page could not be found.">
