--- a/src/components/CoversGrid/coversGrid.module.scss
+++ b/src/components/CoversGrid/coversGrid.module.scss
@@ -45,6 +45,7 @@
   align-items: center;
   justify-content: center;
   gap: var(--space-m);
+  width: 100%;
 }
 
 .album {
@@ -65,6 +66,7 @@
   img {
     width: 100%;
     height: 100%;
+    aspect-ratio: 1;
     object-fit: cover;
   }
 
