--- a/src/components/CoversGrid/coversGrid.module.scss
+++ b/src/components/CoversGrid/coversGrid.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   gap: var(--space-xl);
   row-gap: var(--space-2xl);
+  padding-block-end: var(--space-2xl);
   @supports (padding: max(0px)) {
     padding-inline-start: max(var(--space-l), env(safe-area-inset-left));
     padding-inline-end: max(var(--space-l), env(safe-area-inset-right));
