--- a/src/components/CoversGrid/coversGrid.module.scss
+++ b/src/components/CoversGrid/coversGrid.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   gap: var(--space-xl);
   row-gap: var(--space-2xl);
-  padding-block-end: var(--space-2xl);
+  padding-block: var(--space-2xl);
   @supports (padding: max(0px)) {
     padding-inline-start: max(var(--space-l), env(safe-area-inset-left));
     padding-inline-end: max(var(--space-l), env(safe-area-inset-right));
@@ -26,21 +26,18 @@
   }
 }
 
-.coverCardWrapper {
-  align-self: flex-start;
-}
-
 .coverCard {
   position: relative;
   border-radius: var(--radius-m);
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: flex-start;
   gap: var(--space-xl);
   text-align: center;
 
   @media (hover: hover) and (pointer: fine) {
-    &:hover {
+    &:not(.placeholder):hover {
       .album {
         transform: rotate(0) translateX(0);
       }
@@ -64,19 +61,20 @@
 }
 
 .album {
-  background-color: var(--mauve-3);
+  background-color: var(--mauve-4);
   border-radius: var(--radius-xs);
   overflow: hidden;
   aspect-ratio: 1;
   transition: transform 0.2s ease-in-out;
-  // https://shadows.brumm.af/
-  box-shadow:
-    0px 1.7px 2.2px rgba(0, 0, 0, 0.02),
-    0px 4px 5.3px rgba(0, 0, 0, 0.028),
-    0px 7.5px 10px rgba(0, 0, 0, 0.035),
-    0px 13.4px 17.9px rgba(0, 0, 0, 0.042),
-    0px 25.1px 33.4px rgba(0, 0, 0, 0.05),
-    0px 60px 80px rgba(0, 0, 0, 0.07);
+
+  :not(.placeholder) {
+    // https://shadows.brumm.af/
+    box-shadow:
+      0px 1.8px 3.6px rgba(0, 0, 0, 0.017),
+      0px 5px 10px rgba(0, 0, 0, 0.025),
+      0px 12.1px 24.1px rgba(0, 0, 0, 0.033),
+      0px 40px 80px rgba(0, 0, 0, 0.05);
+  }
 
   img {
     width: 100%;
@@ -98,25 +96,63 @@
   }
 }
 
+@keyframes pulse {
+  0% {
+    background-color: var(--mauve-4);
+  }
+  50% {
+    background-color: var(--mauve-3);
+  }
+  100% {
+    background-color: var(--mauve-4);
+  }
+}
+
+.placeholder .album,
+.title:empty,
+.artist:empty {
+  animation: pulse 1s ease-in-out infinite;
+}
+
 .content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: var(--space-xs);
+  width: 100%;
 }
 
 .title,
 .artist {
   text-wrap: balance;
   transition: color 0.2s ease;
+  width: 100%;
+}
+
+.title:empty,
+.artist:empty {
+  background: var(--mauve-3);
+  display: block;
+  border-radius: var(--radius-xs);
 }
 
 .title {
   font-size: var(--step-1);
+
+  &:empty {
+    width: 70%;
+    height: var(--space-xl);
+  }
 }
 
 .artist {
   color: var(--mauve-11);
   line-height: 1.3;
+
+  &:empty {
+    width: 90%;
+    height: var(--space-l);
+  }
 }
 
 .link {
@@ -124,42 +160,45 @@
   inset: 0;
 }
 
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.loadMore {
+.pagination {
   display: flex;
+  flex-direction: column;
+  gap: var(--space-s);
   align-items: center;
-  gap: var(--space-m);
-  background: var(--mauve-12);
-  color: var(--mauve-1);
-  border: none;
-  cursor: pointer;
-  border-radius: var(--radius-full);
-  padding-block: var(--space-s);
-  padding-inline: var(--space-xl);
   margin-inline: auto;
   margin-block-end: var(--space-xl);
-  font-size: var(--step-1);
-  font-weight: var(--font-weight-bold);
 
-  @media (hover: hover) and (pointer: fine) {
-    &:hover {
-      background: var(--violet-9);
-      color: white;
+  .buttons {
+    display: flex;
+    gap: var(--space-s);
+  }
+
+  button {
+    background: var(--mauve-12);
+    color: var(--mauve-1);
+    border: none;
+    cursor: pointer;
+    border-radius: var(--radius-full);
+    padding-block: var(--space-s);
+    padding-inline: var(--space-xl);
+    font-size: var(--step-1);
+    font-weight: var(--font-weight-bold);
+
+    @media (hover: hover) and (pointer: fine) {
+      &:not([disabled]):hover {
+        background: var(--violet-9);
+        color: white;
+      }
     }
-  }
 
-  &[disabled] {
-    opacity: 0;
-    cursor: default;
-  }
+    &[disabled] {
+      opacity: 0.3;
+      cursor: default;
+    }
 
-  &:focus {
-    outline: 3px solid var(--violet-a9);
-    outline-offset: 3px;
+    &:focus {
+      outline: 3px solid var(--violet-a9);
+      outline-offset: 3px;
+    }
   }
 }
