Add sparkle on new

--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -3,10 +3,10 @@
 @import '@radix-ui/colors/mauve-dark.css';
 @import '@radix-ui/colors/mauve-dark-alpha.css';
 
-@import '@radix-ui/colors/violet.css';
-@import '@radix-ui/colors/violet-alpha.css';
-@import '@radix-ui/colors/violet-dark.css';
-@import '@radix-ui/colors/violet-dark-alpha.css';
+@import '@radix-ui/colors/pink.css';
+@import '@radix-ui/colors/pink-alpha.css';
+@import '@radix-ui/colors/pink-dark.css';
+@import '@radix-ui/colors/pink-dark-alpha.css';
 
 @import '@radix-ui/colors/orange.css';
 @import '@radix-ui/colors/orange-alpha.css';
