--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -124,12 +124,11 @@
 
   /* Shadows */
   /* https://shadows.brumm.af/ */
-  --shadow-album-s: 0.2px 0.2px 0.4px rgba(0, 0, 0, 0.028), 0.5px 0.5px 1px rgba(0, 0, 0, 0.04),
-    1.2px 1.2px 2.4px rgba(0, 0, 0, 0.052), 4px 4px 8px rgba(0, 0, 0, 0.08);
-  --shadow-album-l: 0.1px 0.4px 0.5px rgba(0, 0, 0, 0.028), 0.3px 1px 1.3px rgba(0, 0, 0, 0.04),
-    0.6px 2.4px 3px rgba(0, 0, 0, 0.052), 2px 8px 10px rgba(0, 0, 0, 0.08);
-  --shadow-album-inset-s: inset 1px -1px 2px rgba(0, 0, 0, 0.2),
-    inset -1px -1px 2px rgba(0, 0, 0, 0.2), inset 0 1px 4px -1px rgba(255, 255, 255, 0.3);
-  --shadow-album-inset-l: inset 2px -2px 4px rgba(0, 0, 0, 0.2),
-    inset -2px -2px 4px rgba(0, 0, 0, 0.2), inset 0 2px 8px -2px rgba(255, 255, 255, 0.3);
+  --shadow-album-s: 0px 0.4px 0.7px rgba(0, 0, 0, 0.12), 0px 1.2px 1.9px rgba(0, 0, 0, 0.111),
+    0px 3.1px 4.4px rgba(0, 0, 0, 0.101), 0px 12px 12px rgba(0, 0, 0, 0.081);
+  --shadow-album-l: 0px 1.1px 1.8px rgba(0, 0, 0, 0.12), 0px 3.2px 5.2px rgba(0, 0, 0, 0.111),
+    0px 8.3px 11.6px rgba(0, 0, 0, 0.101), 0px 32px 32px rgba(0, 0, 0, 0.081);
+  --shadow-album-inset-s: inset 0 -1px 1px rgba(0, 0, 0, 0.05),
+    inset 0 -0.5px 0.5px rgba(0, 0, 0, 0.15);
+  --shadow-album-inset-l: inset 0 -2px 2px rgba(0, 0, 0, 0.05), inset 0 -1px 1px rgba(0, 0, 0, 0.15);
 }
