--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -8,10 +8,20 @@
 @import '@radix-ui/colors/pink-dark.css';
 @import '@radix-ui/colors/pink-dark-alpha.css';
 
+@import '@radix-ui/colors/purple.css';
+@import '@radix-ui/colors/purple-alpha.css';
+@import '@radix-ui/colors/purple-dark.css';
+@import '@radix-ui/colors/purple-dark-alpha.css';
+
 @import '@radix-ui/colors/orange.css';
 @import '@radix-ui/colors/orange-alpha.css';
 @import '@radix-ui/colors/orange-dark.css';
 @import '@radix-ui/colors/orange-dark-alpha.css';
+
+@import '@radix-ui/colors/green.css';
+@import '@radix-ui/colors/green-alpha.css';
+@import '@radix-ui/colors/green-dark.css';
+@import '@radix-ui/colors/green-dark-alpha.css';
 
 @import '@radix-ui/colors/red.css';
 @import '@radix-ui/colors/red-alpha.css';
