--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -89,13 +89,13 @@
   --font-unstable: 'salt' 1, 'ss01' 1, 'ss02' 1, 'ss03' 1, 'ss04' 1;
 
   /* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,22,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
-  --step--1: clamp(0.8331rem, 0.7642rem + 0.3446vw, 1.0313rem);
-  --step-0: clamp(1rem, 0.8696rem + 0.6522vw, 1.375rem);
-  --step-1: clamp(1.2rem, 0.9798rem + 1.1011vw, 1.8331rem);
-  --step-2: clamp(1.44rem, 1.0911rem + 1.7446vw, 2.4431rem);
-  --step-3: clamp(1.7281rem, 1.1964rem + 2.6587vw, 3.2569rem);
-  --step-4: clamp(2.0738rem, 1.2851rem + 3.9435vw, 4.3412rem);
-  --step-5: clamp(2.4881rem, 1.3407rem + 5.737vw, 5.7869rem);
+  --step--1: clamp(0.8333rem, 0.7754rem + 0.2899vi, 1rem);
+  --step-0: clamp(1rem, 0.913rem + 0.4348vi, 1.25rem);
+  --step-1: clamp(1.2rem, 1.0739rem + 0.6304vi, 1.5625rem);
+  --step-2: clamp(1.44rem, 1.2615rem + 0.8924vi, 1.9531rem);
+  --step-3: clamp(1.728rem, 1.4799rem + 1.2407vi, 2.4414rem);
+  --step-4: clamp(2.0736rem, 1.7334rem + 1.7011vi, 3.0518rem);
+  --step-5: clamp(2.4883rem, 2.027rem + 2.3067vi, 3.8147rem);
 
   /* @link https://utopia.fyi/space/calculator?c=320,8,1.2,1240,12,1.333,6,2,&s=0.75|0.5,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
   --space-2xs: clamp(0.25rem, 0.2065rem + 0.2174vw, 0.375rem);
