Show scrollbar for tags

--- a/src/lib/styles/base.css
+++ b/src/lib/styles/base.css
@@ -6,6 +6,7 @@ html {
 body.dark {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color-scheme: dark;
 }
 
 body {
@@ -22,6 +23,7 @@ body {
   text-rendering: optimizelegibility;
   font-synthesis: none;
   font-feature-settings: var(--font-stable);
+  color-scheme: light;
 }
 
 ::selection {
