--- a/src/lib/styles/theme.css
+++ b/src/lib/styles/theme.css
@@ -141,4 +141,6 @@
   --shadow-album-inset-s: inset 0 -1px 1px rgba(0, 0, 0, 0.05),
     inset 0 -0.5px 0.5px rgba(0, 0, 0, 0.15);
   --shadow-album-inset-l: inset 0 -2px 2px rgba(0, 0, 0, 0.05), inset 0 -1px 1px rgba(0, 0, 0, 0.15);
+
+  color-scheme: light dark;
 }
