Fix theme render logic to update meta color

--- a/src/lib/styles/base.css
+++ b/src/lib/styles/base.css
@@ -3,15 +3,12 @@ html {
   height: 100%;
 }
 
-body.dark {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color-scheme: dark;
+html, body {
+  color: var(--mauve-12);
+  background-color: var(--mauve-1);
 }
 
 body {
-  color: var(--mauve-12);
-  background-color: var(--mauve-1);
   display: flex;
   min-height: 100%;
   position: relative;
@@ -23,7 +20,11 @@ body {
   text-rendering: optimizelegibility;
   font-synthesis: none;
   font-feature-settings: var(--font-stable);
-  color-scheme: light;
+}
+
+body.dark {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 ::selection {
